# mcp-anon

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pip-freeze.txt  pyproject.toml  requirements.txt
.gemini/: settings.json
integration/cursor/: README.md  docker-compose.yaml  start-mcp-anon-with-http.sh
integration/cursor/.cursor/: mcp.json
integration/example-data/: example.csv
integration/gemini-cli/: README.md
integration/gemini-cli/http/: .gitignore  README.md  start-mcp-anon-with-http.sh
integration/gemini-cli/http/.gemini/: settings.json
integration/gemini-cli/secure/: entrypoint.sh
integration/gemini-cli/secure/.gemini/: settings.json
integration/gemini-cli/stdio/.gemini/: settings.json
integration/oterm/: .gitignore  Dockerfile  README.md  config.json  docker-compose.yaml
src/app/: __main__.py  server.py  session.py  settings.py  state.py
src/app/dataset/view/: schema.py  stats.py
src/app/pipeline/: __init__.py  __main__.py  cli.py  custom_transform.py  pipeline.py  step.py  step_union.py  transform_sequence.py
src/app/pipeline/pandas/: load.py  (+3 more)
src/mcp_anon/: server.py  state.py
src/mcp_anon/patch/: fastmcp.py
src/mcp_anon/pipeline/: __init__.py  cli.py  custom_transform.py  pipeline.py  step.py  step_union.py
src/tests/: conftest.py  experiment.py  test_cli.py  test_persistence.py  test_pipeline.py  test_server.py  test_server_from_persisted.py
src/tests/datasets/: datatypes.csv  small.csv
src/tests/workdir/: .gitignore
userscript/: test.sh  update-pip-freeze.sh
userscript/inspect/: .gitignore  inspect.sh
(+13 files in other folders)
